# kms-dashboard

./: .env.example  .gitignore  .prettierignore  Cargo.toml  GEMINI.md  HANDOVER.md  Makefile  README.md  askama.toml  build.rs  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml  rust-analyzer.toml
.claude/: settings.local.json
.gemini/: settings.json
.kilo/plans/: 1775193066465-neon-star.md  1775202421305-hidden-planet.md  1775882512415-hidden-star.md
docs/architecture/: CONTROLLERS.md  HTMX_LIFECYCLE.md  MODELS.md  OVERVIEW.md  VIEWS.md
docs/refactoring/: phase-1-repository-layer.md  phase-2-split-admin-handler.md  phase-3-split-dashboard-routes.md  phase-4-pagination-constant.md  phase-5-standardize-state.md
migrations/: 20260330000000_init.sql  20260401083311_logout.sql  20260403085421_forgot-password.sql  20260406000000_user_status.sql  20260407054129_add_user_disable_fields.sql  20260416060408_session_management_settings.sql
src/: app_state.rs  config.rs  db.rs  email_templates.rs  error.rs  mailer.rs  main.rs  page_context.rs  render.rs  startup.rs
src/auth/: blocklist.rs  dto.rs  extractor.rs  field_validation.rs  hashing.rs  jwt.rs  mod.rs
src/db/: mod.rs  seed.rs
src/handlers/: actions.rs  admin.rs  api.rs  auth.rs  dashboard.rs  logout_partial.rs  mod.rs  pages.rs  partial.rs  partials.rs  password_reset.rs
src/middleware/: auth.rs  mod.rs  (+2 more)
templates/: auth_layout.html  dashboard_layout.html  error.html  forgot_password.html  forgot_password_verify.html  layout.html  login.html  reset_password.html  search.html  signup.html
(+118 files in other folders)
